# AI-Commerce-OS

./: .gitignore  AI-Commerce-OS_Dashboard_V1.html  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/agents/: agent_registry.py  ai_ceo_agent.py  ai_ceo_context.py  ai_ceo_prompt.py  ai_ceo_response.py  base_agent.py  default_agents.py  operational_agent.py  product_agent.py  product_context.py  product_prompt.py  product_response.py  sales_agent.py  (+3 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_agent_tasks.py  test_agents_list_api.py  test_ai_ceo_agent.py  test_ai_ceo_delegation.py  test_analytics_api.py  test_database_readiness.py  test_database_schema.py  test_deliverable_api.py  test_deliverable_export.py  test_deliverable_service.py  test_edition_boundary.py  test_external_task_submit_api.py  test_knowledge_api.py  test_llm_gateway.py  test_n8n_workflow_artifacts.py  test_operation_log_service.py  test_product_agent.py  test_product_agent_api.py  test_product_context.py  test_product_response.py  test_product_task_api.py  test_provider_cost_service.py  test_runtime_auto_resume_api.py  test_runtime_heartbeat.py  test_runtime_persistence_api.py  test_runtime_recovery.py  test_runtime_state_service.py  test_sales_agent.py  test_sales_agent_api.py  test_sales_context.py  test_sales_response.py  test_sales_task_api.py  test_settings_api.py  test_settings_llm_status_api.py  test_shop_api.py  test_shop_scope.py  test_shop_service.py  test_sqlalchemy_echo_config.py  test_startup_schema_management.py  (+24 more)
(+424 files in other folders)
