[project]
name = "ai-commerce-os"
version = "0.1.0"
description = "AI Commerce OS Backend"
requires-python = ">=3.12"

dependencies = [
    "alembic>=1.18.5",
    "cryptography>=49.0.0",
    "fastapi>=0.116.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
